created movie search app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mudi-igbinoab.github.io/Movie-Search-App",
+  "homepage": "https://mudi-igbinoba.github.io/Movie-Search-App",
   "name": "movie-search-app",
   "version": "0.1.0",
   "private": true,
